BUG#37977: Wrong result returned on GROUP BY + OR + Innodb - Make test_if_skip_sort_order() restore the where condition if it   decides not to use the index that make_join_readinfo() has previously   decided to use. We need to do this because part of the condition may   have been pushed down to storage engine with push_index_cond()