sql/sql_select.cc
@@ -16169,6 +16169,8 @@ test_if_skip_sort_order(JOIN_TAB *tab,ORDER *order,ha_rows select_limit,
             table->key_read=1;
             table->file->extra(HA_EXTRA_KEYREAD);
           }
+          if (tab->pre_idx_push_select_cond)
+            tab->select_cond= tab->select->cond= tab->pre_idx_push_select_cond;
           table->file->ha_index_or_rnd_end();
           if (join->select_options & SELECT_DESCRIBE)
           {
